--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ tokio = { version = "1.43", features = [
     "macros",
     "rt-multi-thread",
 ] }
+dotenvy = "0.15"
+
+[dev-dependencies]
+dotenvy = "0.15"
