fix: example code dependencies

--- a/examples/async_std_firecracker/Cargo.toml
+++ b/examples/async_std_firecracker/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-firecracker-sdk = { path = "../../", features = ["_rt-async-std"] }
+firecracker-rs-sdk = { path = "../../", features = ["_rt-async-std"] }
 async-std = { version = "1.13", features = ["attributes"] }
