--- a/examples/std_firecracker/Cargo.toml
+++ b/examples/std_firecracker/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-firecracker-sdk = { path = "../../", features = ["_rt-std"] }
+firecracker-rs-sdk = { path = "../../", features = ["_rt-std"] }
