--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,23 @@
 name = "firecracker-rs-sdk"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/xuehaonan27/firecracker-rs-sdk"
+keywords = ["firecracker", "AWS", "cloud", "rustcracker"]
+categories = ["virtualization", "cloud", "asynchronous"]
+authors = ["Xue Haonan <xuehaonan27@gmail.com>"]
+readme = "README.md"
+description = "🧨🦀🚀 The Firecracker Rust SDK. A pure Rust crate for interacting with Firecracker."
 
 [features]
 default = []
+
+# For conditional compilation
 _rt-std = []
 _rt-tokio = ["_rt-async", "tokio"]
 _rt-async-std = ["_rt-async", "async-std"]
+
+# For sharing code between `_rt-tokio` and `_rt-async-std`
 _rt-async = ["async-trait"]
 
 [dependencies]
