chore: remove not supported category.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/xuehaonan27/firecracker-rs-sdk"
 keywords = ["firecracker", "AWS", "cloud", "rustcracker"]
-categories = ["virtualization", "cloud", "asynchronous"]
+categories = ["virtualization", "asynchronous"]
 authors = ["Xue Haonan <xuehaonan27@gmail.com>"]
 readme = "README.md"
 description = "🧨🦀🚀 The Firecracker Rust SDK. A pure Rust crate for interacting with Firecracker."
